# project-tz-io

./: .gitignore  cloudbuild.yaml  make
.circleci/: config.yml
bytecode-samples/: File.bc  File.java
java-reader/src/: attributes.rs  fields.rs  inheritance.rs  main.rs  operations.rs  pool.rs  printer.rs  reader.rs
language-samples/: decrement.io  diffs.io  double.io  increment.io  max-stream.io  max.io  sum.io
rs-parser/: Cargo.toml
rs-parser/app/: Cargo.toml
rs-parser/app/src/: main.rs
rs-parser/checker/: Cargo.toml
rs-parser/checker/src/: instruction.rs  interface.rs  io.rs  lib.rs  mapping.rs  result.rs  test.rs
rs-parser/generator/: Cargo.toml
rs-parser/generator/src/: lib.rs  mod.rs
rs-parser/language/: Cargo.toml
rs-parser/language/src/: address.rs  instruction.rs  lib.rs  syntax.rs  test.rs
rs-parser/parser/: Cargo.toml
rs-parser/parser/src/: address.rs  common.rs  lib.rs  mapping.rs  syntax.rs  test.rs
rs-parser/postprocessor/: Cargo.toml
rs-parser/postprocessor/src/: lib.rs  mapping.rs
rs-parser/src/: main.rs
rs-parser/src/checker/: instruction.rs  io.rs  mapping.rs  mod.rs  test.rs
rs-parser/src/generator/: mod.rs
rs-parser/src/parser/: address.rs  common.rs  mod.rs  syntax.rs  test.rs
tzio-core/: BUILD  WORKSPACE  build.gradle  settings.gradle
tzio-core/clj/: CHANGELOG.md  project.clj
tzio-core/clj/src/clj/: env.clj  (+1 more)
tzio-core/clojure/: build.gradle
tzio-core/java/: build.gradle
tzio-core/jdk18/: build.gradle
tzio-core/scala/: build.gradle
tzio-core/spec/: BUILD  build.gradle
tzio-core/tck/: build.gradle
(+164 files in other folders)
