[package]
name = "app"
version = "0.2.0"
authors = ["Kineolyan <kineolyan@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
language = { path = "../language" }
parser = { path = "../parser" }
postprocessor = { path = "../postprocessor" }
checker = { path = "../checker" }
generator = { path = "../generator" }